--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
-
+<!-- <p id="notice"><%= notice %></p>
+ -->
 <p>
   <strong>Sub total:</strong>
   <%= @order.sub_total %>
