--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
     <p class="navbar-text pull-right">
     <% if user_signed_in? %>
       Logged in as: <strong><%= current_user.email %></strong>.
+      <%= link_to "View Cart", view_order_path %>  |
       <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
       <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
     <% else %>
@@ -39,6 +40,8 @@
     <% end %>
     </p>
     <p>
+
+
 <!--       category dropdown
  -->      <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
